Spacer fix for some resolutions to avoid 1px gap

--- a/huebyte/src/core/Spacers/Spacer.scss
+++ b/huebyte/src/core/Spacers/Spacer.scss
@@ -4,4 +4,5 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  transform: translateY(-1px);
 }
